# threads-digest

./: .gitignore  CLAUDE.md  README.md  README.uk.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
scripts/: __main__.py  chrome_launcher.py  cli.py
scripts/threads/: __init__.py  cdp.py  errors.py  feed.py  human.py  login.py  selectors.py  stealth.py  types.py  urls.py
skills/threads-digest/: SKILL.md
