[project]
name = "threads-digest"
version = "0.1.0"
description = "Threads feed scraper using Chrome CDP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E402", "RUF001", "RUF002", "RUF003"]

[tool.pytest.ini_options]
testpaths = ["tests"]
